# lumi_type

./: .gitignore  README.md
.github/workflows/: release.yml
docs/: verification.md
frontend/: overlay.css  overlay.html  overlay.js  settings.css  settings.html  settings.js
scripts/: bench-runtime.sh  setup-porcupine-fallback.sh  verify-assets.sh
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/core/: audio.rs  injector.rs  mod.rs  permissions.rs  state.rs  transcriber.rs  vad.rs  wake_word.rs
